@startuml

title __STATES's Class Diagram__\n

  namespace PaooGame {
    namespace States {
      class PaooGame.States.AboutState {
          + AboutState()
          + Draw()
          + Update()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.BattleState {
          - EnemyOption : String
          - EnemyOption1 : String
          - NPCs : List<NPC>
          - choice : int
          - countHits : int
          - downFlag : boolean
          - enterFlag : boolean
          - hashtagX : int
          - hashtagY : int
          - image : BufferedImage
          - letterImages : List<BufferedImage>
          - myTurn : boolean
          - optionsString : List<String>
          - releaseDOWNFlag : boolean
          - releaseENTERFlag : boolean
          - releaseUPFlag : boolean
          - upFlag : boolean
          + BattleState()
          + Draw()
          + Update()
          + resetBattle()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.InventoryState {
          {static} - inventory : Inventory
          + Draw()
          + InventoryState()
          + Update()
          {static} + getInventory()
          {static} + getState()
          {static} + setState()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.MenuState {
          {static} - menu : Menu
          + Draw()
          + MenuState()
          + Update()
          {static} + getMenu()
          {static} + getState()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.PlayState {
          {static} - hero : Hero
          {static} - npcs : List<NPC>
          + Draw()
          + PlayState()
          + Update()
          {static} + getHero()
          {static} + getNpcs()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.Sample {
          {static} + main()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.SettingsState {
          + Draw()
          + SettingsState()
          + Update()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.Singleton {
          - data : int
          {static} - instance : Singleton
          {static} + GetInstance()
          {static} + Reset()
          + getData()
          ~ setData()
          - Singleton()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      abstract class PaooGame.States.State {
          {static} - currentState : State
          {static} - previousState : State
          {abstract} + Draw()
          {static} + GetState()
          {static} + SetState()
          + State()
          {abstract} + Update()
      }
    }
  }
  

  PaooGame.States.AboutState -up-|> PaooGame.States.State
  PaooGame.States.BattleState -up-|> PaooGame.States.State
  PaooGame.States.BattleState o-- PaooGame.States.Singleton : mySingleton
  PaooGame.States.BattleState o-- PaooGame.Items.Hero : hero
  PaooGame.States.BattleState o-- PaooGame.Items.NPC : npc
  PaooGame.States.InventoryState -up-|> PaooGame.States.State
  PaooGame.States.MenuState -up-|> PaooGame.States.State
  PaooGame.States.PlayState -up-|> PaooGame.States.State
  PaooGame.States.PlayState o-- PaooGame.Maps.Map : map
  PaooGame.States.SettingsState -up-|> PaooGame.States.State
  PaooGame.States.State o-- PaooGame.RefLinks : refLink


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
